--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
+
     <string name="app_name">Parsetagram</string>
+
+    <!-- Login -->
+    <string name="email_address">Email Address</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log in</string>
+    <string name="register">Register</string>
+
+    <!-- Landing -->
+    <string name="logout">Logout</string>
+
+    <!-- Errors -->
+    <string name="error_login">Login failed. Please try again.</string>
+    <string name="error_registration">Registration failed. Please try again.</string>
+    <string name="error_invalid_email">Invalid email.</string>
+    <string name="error_invalid_password">Invalid password.</string>
+
 </resources>
