Added fragment navigation to bottom bar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="log_in">Log in</string>
     <string name="register">Register</string>
 
-    <!-- Landing -->
+    <!-- Profile -->
     <string name="logout">Logout</string>
 
     <!-- Errors -->
